<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="Question_Egypt">Is Cairo The Capital Of Egypt?</string>
    <string name="Question_America">Is Texas The Capital Of America?</string>
    <string name="Question_Australia">Is Canberra The Capital Of Australia?</string>
    <string name="Question_Brazil">Is Brasilia The Capital Of Brazil?</string>
    <string name="Question_Canada">Is Sofia The Capital Of Canada?</string>
    <string name="Question_England">Is London The Capital Of England?</string>
    <string name="Question_France">Is Monaco The Capital Of France?</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="Correct">Correct Answer</string>
    <string name="notCorrect">InCorrect Answer!!</string>
    <string name="change_language">Change Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="totalScore">Total Score</string>
    <string name="score">Your score is: </string>
    <string name="cancel">Cancel</string>
    <string name="warning">Are you sure you want to do this?</string>
    <string name="show_answer_btn">Show Answer</string>
    <string name="cheat_btn">Cheat</string>
    <string name="judgement_toast">Try to depend on your self ok?</string>
    <string name="cheater">Cheater</string>
</resources>