<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/Lelaa"
    tools:context=".home.HomeActivity">
<TextView
    android:id="@+id/theQuestion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:gravity="center"
    tools:text="@string/Question_Canada"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="bold"
    />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/true_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/True"
        android:textStyle="italic"
        android:textColor="#F1DADA"
        android:layout_margin="2dp"
        android:background="@drawable/btns_ans"
        />
    <Button
        android:id="@+id/false_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/False"
        android:textStyle="italic"
        android:textColor="#F1DADA"
        android:background="@drawable/btns_ans"
        android:layout_margin="2dp"
        />
</LinearLayout>
    <Button
        android:id="@+id/cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cheat_btn"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    >
    <ImageView
        android:id="@+id/prev_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_left_arrow"
        android:layout_marginEnd="20dp"
        app:tint="@color/teal_200"
        />
    <ImageView
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right_arrow"
        android:layout_marginStart="20dp"
        app:tint="@color/teal_200"
        />
</LinearLayout>
    <Button
        android:id="@+id/changeLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/lang"
        android:text="@string/change_language"
        />
        />
</LinearLayout>